--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,31 +1,46 @@
-/* Navbar */
 .navbar {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    background: #ffffff;
     align-items: center;
+    justify-content: space-between; 
+    padding: 20px 20px;
+    background: #ffffff;
+    position: relative; 
     width: 100%;
-    position: relative;
     top: 0;
     left: 0;
-    margin-bottom: 0px;
     z-index: 1000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    height: 50px;
+    width: auto;
+    object-fit: contain;
+    margin-right: 10px;
+}
+
+/* Navbar Links */
 .nav-links {
     list-style: none;
     display: flex;
+    gap: 15px;
+    padding-left: 0;
+    margin-left: auto; /* Pushes navbar to the right */
 }
 
 .nav-links li {
-    margin: 0 15px;
+    margin: 0;
 }
 
 .nav-links a {
     text-decoration: none;
-    color: #333333;
+    color: #333;
     font-weight: 500;
     transition: color 0.3s, transform 0.3s;
 }
@@ -34,16 +49,8 @@
     color: #007bff;
     transform: scale(1.1);
 }
+
 .nav-links .active {
     font-weight: bold;
     color: #007bff;
-  }
-  
-.section-container, 
-.trust-section, 
-.features-section, 
-.how-it-works, 
-.hero {
-    padding: 20px 20px;
-    margin-bottom: 30px;
 }
